check updated on about page 2

--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -24,43 +24,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-           <TextView
-               android:id="@+id/link1"
-               android:linksClickable="true"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_marginStart="20dp"
-               android:layout_marginTop="30dp"
-               android:text="@string/l1"
-               />
-            <TextView
-                android:id="@+id/link2"
-                android:linksClickable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/l2"
-                />
-            <TextView
-                android:id="@+id/link3"
-                android:linksClickable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/l3"
-                />
-            <TextView
-                android:id="@+id/link4"
-                android:linksClickable="true"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/l4"
-                />
-
             <!--<android.support.v7.widget.CardView-->
                 <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                 <!--android:layout_marginStart="5dp"-->
@@ -73,6 +36,24 @@
                 <!--android:layout_gravity="center"-->
                 <!--card_view:cardCornerRadius="4dp"-->
                 <!--card_view:cardElevation="8dp">-->
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/listId"
+                android:background="#f79727"
+                android:textFilterEnabled="false"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="30dp" />
+
+            <TextView
+                android:id="@+id/textview"
+                android:layout_width="110dp"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/listId"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="66dp" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -128,6 +109,15 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+            <me.biubiubiu.justifytext.library.JustifyTextView
+                android:id="@+id/text1"
+                android:layout_width="347dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="-90dp"
+                android:text="@string/about_thank"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="345dp"
