time table and assingment module almost done

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,7 +77,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/maintanance" />
                 <ImageView
-                    android:id="@+id/ent"
+                    android:id="@+id/timetable"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/gridImageSize"
                     android:layout_weight="1"
