--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#067AD2</color>
+    <color name="colorPrimaryDark">#FF0765AC</color>
     <color name="colorAccent">#067AD2</color>
     <color name="black">#000000</color>
     <color name="white">#FAFAFA</color>
