--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,8 +22,8 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/colorAccent"
-            app:tabBackground="@color/colorPrimary"
+            app:tabIndicatorColor="@color/red"
+            app:tabBackground="@color/tabcolor"
             app:tabGravity="fill"
             app:tabMode="scrollable">
         </android.support.design.widget.TabLayout>
