--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -39,7 +39,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".3"
+            android:layout_weight=".2"
             android:text="@string/teacher_dialog"
             android:textAlignment="textStart"
             android:textColor="@android:color/black"
@@ -49,7 +49,7 @@
             android:id="@+id/teacher_dialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".7"
+            android:layout_weight=".8"
             android:imeOptions="actionDone"
             android:singleLine="true"
             android:textColor="@android:color/black" />
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".8"
             android:imeOptions="actionDone"
-            android:inputType="number"
+            android:inputType="textCapWords"
             android:singleLine="true"
             android:textColor="@android:color/black" />
     </LinearLayout>
