--- a/app/src/main/res/layout/fragment_friday.xml
+++ b/app/src/main/res/layout/fragment_friday.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.FridayFragment">
+    tools:context=".FridayFragment">
 
     <ListView
         android:id="@+id/fridaylist"
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         android:listSelector="@android:color/transparent"
         android:cacheColorHint="@android:color/transparent"
-        android:divider="@null"
-        />
+        android:divider="@null" />
 
 </FrameLayout>
