--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -24,6 +24,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <!--<ListView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/listView"-->
+                <!--android:layout_alignBottom="@+id/listId"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_marginBottom="66dp"-->
+
+                <!--android:choiceMode="singleChoice"-->
+
+                />
             <!--<android.support.v7.widget.CardView-->
                 <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
                 <!--android:layout_marginStart="5dp"-->
@@ -47,12 +58,28 @@
                 android:layout_marginBottom="30dp" />
 
             <TextView
-                android:id="@+id/textview"
+                android:id="@+id/textviewA"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/listId"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="66dp" />
+
+            <!--<ListView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:id="@+id/listId"-->
+
+                <!--android:background="#f79727"-->
+                <!--android:textFilterEnabled="false"-->
+                <!--android:layout_marginBottom="30dp" />-->
+
+            <!--<ListView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/listView"-->
+                <!--android:layout_alignBottom="@+id/listId"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_marginBottom="66dp" />-->
 
             <View
                 android:layout_width="match_parent"
