--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -55,6 +55,7 @@
                 android:textFilterEnabled="false"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="30dp" />
 
             <TextView
