--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,179 +9,101 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".2"
-            android:text="@string/subject_dialog"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/subject_dialog"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".8"
+            android:hint="@string/module"
+            android:textAlignment="center"
             android:imeOptions="actionDone"
+            android:inputType="textPersonName"
             android:singleLine="true"
-            android:textColor="@android:color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".2"
-            android:text="@string/teacher_dialog"
-            android:textAlignment="textStart"
             android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:autofillHints="textPersonName" />
 
         <EditText
+            android:textAlignment="center"
             android:id="@+id/teacher_dialog"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".8"
+            android:hint="@string/tutor"
             android:imeOptions="actionDone"
+            android:inputType="textPersonName"
             android:singleLine="true"
             android:textColor="@android:color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".2"
-            android:text="@string/room_dialog"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/room_dialog"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".8"
+            android:hint="@string/classr"
             android:imeOptions="actionDone"
-            android:inputType="textCapWords"
+            android:textAlignment="center"
+            android:importantForAutofill="no"
+            android:textAllCaps="true"
             android:singleLine="true"
             android:textColor="@android:color/black" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".3"
-            android:text="@string/time_from_dialog"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/from_time"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".3"
-            android:text="@string/select_time"
-            android:textAllCaps="true"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".3"
-            android:text="@string/time_to_dialog"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/to_time"
-            android:layout_marginTop="5dp"
-            android:layout_width="0dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".3"
-            android:text="@string/select_time"
+            android:layout_marginTop="5dp"
+            android:text="@string/time_from"
             android:textAllCaps="true"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <Button
-
-            android:id="@+id/select_color"
+        <TextView
+            android:id="@+id/from_time"
+            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="50dp"
+            android:text="@string/time_to"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/select_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="5dp"
             android:background="@color/white"
             android:text="@string/select_color"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textSize="18sp"
             android:textStyle="bold" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:text="@string/cancel"
-            android:layout_weight="1"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/cancel"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
-        <Button
-            android:text="@string/save"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/save"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
-
+            <Button
+                android:id="@+id/cancel"
+                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:text="@string/cancel" />
+            <Button
+                android:id="@+id/save"
+                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:text="@string/save" />
+        </TableRow>
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
