--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -15,16 +15,15 @@
             android:id="@+id/subject_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autofillHints="textPersonName"
             android:hint="@string/module"
-            android:textAlignment="center"
             android:imeOptions="actionDone"
             android:inputType="textPersonName"
             android:singleLine="true"
-            android:textColor="@android:color/black"
-            android:autofillHints="textPersonName" />
+            android:textAlignment="center"
+            android:textColor="@android:color/black" />
 
         <EditText
-            android:textAlignment="center"
             android:id="@+id/teacher_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,6 +31,7 @@
             android:imeOptions="actionDone"
             android:inputType="textPersonName"
             android:singleLine="true"
+            android:textAlignment="center"
             android:textColor="@android:color/black" />
 
         <EditText
@@ -40,39 +40,61 @@
             android:layout_height="wrap_content"
             android:hint="@string/classr"
             android:imeOptions="actionDone"
-            android:textAlignment="center"
             android:importantForAutofill="no"
-            android:textAllCaps="true"
             android:singleLine="true"
+            android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@android:color/black" />
 
         <TextView
-            android:id="@+id/to_time"
-            android:textAlignment="center"
+            android:id="@+id/ggggg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_weight=".5"
             android:text="@string/time_from"
-            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:textAllCaps="false"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/from_time"
-            android:textAlignment="center"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/time_to"
-            android:textAllCaps="true"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/to_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_weight=".5"
+                android:text="@string/time_from"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/from_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight=".5"
+                android:text="@string/time_to"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </TableRow>
+
 
         <Button
             android:id="@+id/select_color"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="5dp"
@@ -81,7 +103,7 @@
             android:background="@color/white"
             android:text="@string/select_color"
             android:textAlignment="center"
-            android:textAllCaps="true"
+            android:textAllCaps="false"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -97,6 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
                 android:text="@string/cancel" />
+
             <Button
                 android:id="@+id/save"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
