--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -144,7 +144,7 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/gridImageSize"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/add" />
+                app:srcCompat="@drawable/assignment" />
 
                 <ImageView
                     android:id="@+id/about"
