--- a/app/src/main/res/layout/activity_maintain.xml
+++ b/app/src/main/res/layout/activity_maintain.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,62 +9,57 @@
     android:paddingRight="15dp"
     tools:context=".maintain">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/roomWrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/roomWrapper"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="30dp">
-
-                <EditText
-                    android:id="@+id/room"
-                    style="@style/Widget.AppCompat.EditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:autofillHints="HA-3-01"
-                    android:hint="Room Number"
-                    android:inputType="text" />
-            </android.support.design.widget.TextInputLayout>
-
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/phoneWrapper"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="20dp">
-
-                <EditText
-                    android:id="@+id/phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:hint="Phone Number"
-                    android:inputType="numberSigned" />
-            </android.support.design.widget.TextInputLayout>
+            android:layout_height="70dp"
+            android:layout_marginTop="30dp">
 
             <EditText
-                android:id="@+id/descript"
+                android:id="@+id/room"
+                style="@style/Widget.AppCompat.EditText"
                 android:layout_width="match_parent"
-                android:layout_height="125dp"
-                android:layout_marginTop="10dp"
-                android:autofillHints="tubelight not working or fan not working"
-                android:hint="@string/problem"
-                android:inputType="textMultiLine" />
+                android:layout_height="60dp"
+                android:autofillHints="HA-3-01"
+                android:hint="Room Number"
+                android:inputType="textCapCharacters" />
+        </android.support.design.widget.TextInputLayout>
 
 
-            <Button
-                android:id="@+id/submit"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/phoneWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="20dp">
+
+            <EditText
+                android:id="@+id/phone"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/submit" />
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+                android:layout_height="60dp"
+                android:autofillHints=""
+                android:hint="Phone Number"
+                android:inputType="phone" />
+        </android.support.design.widget.TextInputLayout>
+
+        <EditText
+            android:id="@+id/descript"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="@string/problem"
+            android:inputType="textMultiLine|textCapSentences" />
+
+
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/submit" />
+    </LinearLayout>
+</ScrollView>
