--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -15,10 +15,9 @@
             android:id="@+id/subject_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints="textPersonName"
             android:hint="@string/module"
             android:imeOptions="actionDone"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             android:singleLine="true"
             android:textAlignment="center"
             android:textColor="@android:color/black" />
@@ -29,7 +28,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/tutor"
             android:imeOptions="actionDone"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             android:singleLine="true"
             android:textAlignment="center"
             android:textColor="@android:color/black" />
@@ -38,6 +37,7 @@
             android:id="@+id/room_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textCapCharacters"
             android:hint="@string/classr"
             android:imeOptions="actionDone"
             android:importantForAutofill="no"
@@ -52,9 +52,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_weight=".5"
-            android:text="@string/time_from"
+            android:text="Set Time"
             android:textAlignment="center"
-            android:textAllCaps="false"
+            android:textAllCaps="true"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -73,7 +73,7 @@
                 android:text="@string/time_from"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black"
+                android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -86,7 +86,7 @@
                 android:text="@string/time_to"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black"
+                android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </TableRow>
@@ -95,9 +95,10 @@
         <Button
             android:id="@+id/select_color"
             android:layout_width="200dp"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="5dp"
             android:background="@color/white"
